# Sports-Crawling

./: .dockerignore  .gitignore  Dockerfile  ProcFile  Procfile  README.MD  README.md  app.json  docker-compose.yml  prompt.txt  pyproject.toml  setup.py  start.ps1  test.py
backend/: Dockerfile  README.md  go.mod
backend/cmd/server/: main.go
backend/internal/sessions/: http.go  manager.go
backend/scripts/: requirements.txt  run_scraper.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/scripts/: graph-logic-check.mjs
frontend/src/: graph-logic.js  main.jsx  styles.css
spcrawler/: README.MD  pyproject.toml
spcrawler/spcrawler/: __init__.py  runner.py
spcrawler/src/: __init__.py  engine.py  runner.py
spcrawler/src/client/: llm.py  model.py  prompts.py
spcrawler/src/instance/: scraper.py
spcrawler/src/utils/: __init__.py  config.py  constants.py
src/: log.py
src/client/: llm.py  model.py  prompts.py
src/instance/: check.py  proxy_manager.py  scraper.py
src/utils/: config.py  constants.py  db.py
