[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spcrawler-engine"
version = "0.1.0"
description = "Python crawl engine for spcrawler scraper sessions"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.4.0",
    "ddgs>=6.0.0",
    "requests>=2.31.0",
]

[project.scripts]
spcrawler-runner = "spcrawler.runner:main"

[tool.setuptools]
packages = [
    "spcrawler",
    "src",
    "src.client",
    "src.instance",
    "src.utils",
]
